提取公共代码

--- a/solar-system/planetoid/planetoid.html
+++ b/solar-system/planetoid/planetoid.html
@@ -7,14 +7,13 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script src="../../utils/three.js"></script>
   <script src="../../utils/orbitControls.js"></script>
-  <title>Document</title>
+  <script src="../../utils/resize.js"></script>
+  <title>Planetoid</title>
   <link rel="stylesheet" href="../style/style.css">
 </head>
 
 <body>
   <script>
-    var _width = window.innerWidth
-    var _height = window.innerHeight
     var fov = 50
     var aspect = _width / _height
     var near = 1
