删除冗余代码

--- a/solar-system/planetoid/planetoid.html
+++ b/solar-system/planetoid/planetoid.html
@@ -20,8 +20,7 @@
     var far = 2000
     var camera, scene, renderer
     var controls
-    var ambitLight, light1, light2
-    var speech = 0
+    var ambitLight, light
 
     stoneTexture = THREE.ImageUtils.loadTexture('../image/planetoid.jpg', {}, function() {
       renderer.render(scene, camera);
