--- a/solar-system/saturn/saturn.html
+++ b/solar-system/saturn/saturn.html
@@ -19,7 +19,7 @@
     var _height = window.innerHeight
     var fov = 50
     var aspect = _width / _height
-    var near = 1
+    var near = .5
     var far = 2000
     var camera, scene, renderer
     var controls
