--- a/solar-system/planetoid/planetoid.html
+++ b/solar-system/planetoid/planetoid.html
@@ -7,7 +7,7 @@
   <script src="../../utils/three.js"></script>
   <script src="../../utils/orbitControls.js"></script>
   <script src="../../utils/resize.js"></script>
-  <title>Planetoid</title>
+  <title>小行星(planetoid)例子</title>
   <link rel="stylesheet" href="../style/style.css">
 </head>
 
@@ -62,28 +62,19 @@
     var Stone = function() {
       this.mesh = new THREE.Object3D()
       var s = 20
-      var noise = 0.9
+      // var noise = 0.9
       var size = s + Math.random() * s
       var geom = new THREE.IcosahedronGeometry(size, 1)
 
       for (var i = 0, l = geom.vertices.length; i < l; i++) {
-        geom.vertices[i].x += size * -0.25 + Math.random() * size * 0.5
-        geom.vertices[i].y += size * -0.25 + Math.random() * size * 0.5
+        geom.vertices[i].x += size * (Math.random() * 0.5 - 0.25)
+        geom.vertices[i].y += size * (Math.random() * 0.5 - 0.25)
       }
       this.star = new THREE.Mesh(geom, stoneMaterial)
       this.mesh.add(this.star)
       this.mesh.rotation.z = Math.PI * 27 / 180
     }
     init()
-
-    function resize() {
-      camera.aspect = window.innerWidth / window.innerHeight;
-      camera.updateProjectionMatrix();
-      renderer.setSize(window.innerWidth, window.innerHeight);
-    }
-
-
-    window.addEventListener("resize", resize);
   </script>
 </body>
 
