--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
     #control {
       width: 18%;
+      visibility: hidden;
       position: absolute;
       top: 0;
       right: 0px;
@@ -135,7 +136,7 @@
     <img id="texture1" src="./palette-thermall.png" class="none" />
     <canvas id="canvas" width="640" height="640" style="width: 640px; height: 640px;"></canvas>
   </div>
-  <div id="control none">
+  <div id="control">
     <input type="checkbox"> 发光
     <div>
       <div class="label">
