--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     #control {
       width: 18%;
-      /* visibility: hidden; */
+      visibility: hidden;
       position: absolute;
       top: 0;
       right: 0px;
