--- a/index.html
+++ b/index.html
@@ -6,11 +6,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Low Poly Generate</title>
-  <script type="module" crossorigin src="./assets/index.e974bbd0.js"></script>
-  <link rel="stylesheet" href="./assets/index.915b2093.css">
+  <script type="module" crossorigin src="./assets/index.30dd0e2f.js"></script>
+  <link rel="stylesheet" href="./assets/index.0042046d.css">
 </head>
 
 <body>
+  <div id="mask">
+    <div class="planet"></div>
+    <div class="dialog"></div>
+    <div class="button"></div>
+  </div>
   <div id='app'>
     <canvas id="canvas" ref="canvas"></canvas>
   </div>
